--- a/package.json
+++ b/package.json
@@ -11,8 +11,10 @@
     "serv": "serve out"
   },
   "dependencies": {
+    "global": "^4.4.0",
     "isomorphic-unfetch": "^3.0.0",
     "moment": "^2.24.0",
+    "netlify-cli": "^2.43.0",
     "next": "^9.3.4",
     "node-fetch": "^2.6.0",
     "react": "^16.13.1",
