--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "serv": "serve out"
   },
   "dependencies": {
+    "axios": "^0.19.2",
     "global": "^4.4.0",
     "isomorphic-unfetch": "^3.0.0",
     "moment": "^2.24.0",
